# django-app-ml

./: .gitignore  Makefile  README.md  __init__.py  decorator.py  env.example  mixins.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: build-and-deploy.yml
django_app_ml/: admin.py  app_settings.py  apps.py  dataset_audit.py  exceptions.py  forms.py  logging.py  mixins.py  ml.py  models.py  paginator.py  recommandation.py  renderer.py  serializer.py  stream.py  tasks.py  tests.py  validators.py  views.py
django_app_ml/migrations/: 0001_initial.py  0002_client_ml_app_clie_target_d0329b_idx.py  0002_rename_source_dataset_link_dataset_description_and_more.py  0003_mlflowtemplate.py  0004_dataset_created_at_dataset_storage_path_and_more.py  0005_bucket_remove_dataset_storage_path_dataset_bucket.py  0006_remove_bucket_name_bucket_endpoint.py  0007_alter_dataset_link.py  0008_report.py  0009_alter_report_file.py  0010_rename_report_auditreport_iarecommandation.py  0011_rename_recommandation_iarecommandation_recommendation_and_more.py  0012_alter_iarecommandation_dataset.py  0013_alter_dataset_link.py  0014_dataset_s3_key_alter_dataset_link.py  0015_mlflowtemplate_model_type_and_more.py
django_app_ml/schema/: audit.py  task.py
django_app_ml/scripts/: upload_wheel.py
django_app_ml/urls/: urls.py
doc/: DATASET_AUDIT_README.md  DATASET_LIST_README.md  RECOMMANDATION_README.md
flows/: xgboost_test.py
migrations/: 0003_parquetbase.py
src/: .npmrc  package-lock.json  package.json  vite.config.js
static/: vite.config.js
urls/: urls_scoring_app.py
(+43 files in other folders)
